--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [egg_info]
-tag_build = dev
-tag_date = true
+# tag_build = dev
+# tag_date = true
 
 [easy_install]
 find_links = http://www.pylonshq.com/download/
